examples/test/testpolicy15656.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15656
  namespace: namespace482
spec:
  podSelector:
    matchLabels:
      key35: value40
      key20: value31
      key29: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value16
          key42: value27
          key5: value3
      podSelector:
        matchLabels:
          key40: value23
